--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-iframe": "^1.8.5",
     "react-router-dom": "^6.18.0",
+    "recoil": "^0.7.7",
     "sass": "^1.69.5",
     "victory": "^36.6.12"
   },
